# AVR-LibC-UART

./: CMakeLists.txt  README.md  fifo.c  fifo.h  main.c  makefile  stddef.h  usart.c  usart.h
stdio_stream/src/: CMakeLists.txt  defines.h  main.c  uart.c
usart_fifo/src/: CMakeLists.txt  main.c  stddef.h  usart.c
